feat: add 3ds simulation
